--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=doa
-DB_USERNAME="root"
-DB_PASSWORD=""
+DB_DATABASE=msbteweb
+DB_USERNAME="divya"
+DB_PASSWORD="divya123"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
