--- a/.env
+++ b/.env
@@ -15,6 +15,13 @@ DB_DATABASE=doa
 DB_USERNAME="root"
 DB_PASSWORD="REu6bseA07w"
 
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=doa
+# DB_USERNAME="amit"
+# DB_PASSWORD="Venom@2001"
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
