--- a/.env
+++ b/.env
@@ -8,19 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=92.204.134.92
-# DB_PORT=3306
-# DB_DATABASE=doa
-# DB_USERNAME="root"
-# DB_PASSWORD="REu6bseA07w"
-
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=92.204.134.92
 DB_PORT=3306
 DB_DATABASE=doa
-DB_USERNAME="amit"
-DB_PASSWORD="Venom@2001"
+DB_USERNAME="root"
+DB_PASSWORD="REu6bseA07w"
+
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=doa
+# DB_USERNAME="amit"
+# DB_PASSWORD="Venom@2001"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
