--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:sWRjEfIRRcA5CsGd0hCb6OjIZSHT/y9Bjk9Adu+84OY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=Asia/Kolkata
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
